fix spacing issues with skyscraper image, unify main code

--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ body {
     flex-flow: row;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
     width: 85%;
-    min-height: 50px;
+    height: auto;
     background-color: #b8b8b8;
     padding: 25px;
     border-radius: 4px;
@@ -65,9 +66,6 @@ body {
 #textInfoMain {
     width: 50%;
     height: 100%;
-    //background-color: purple;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 #titleText {
@@ -82,26 +80,22 @@ body {
     width: 40%;
     height: 200px;
     background-color: black;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 .mainPageImg {
-    margin-top: auto;
-    margin-bottom: auto;
+    width: 40%;
 }
 
 #skyScraperImg {
-    width: 40%;
-    //margin-top: 0px;
+
 }
 
 #houseImg {
-    width: 40%;
+
 }
 
 #galleryImg {
-    width: 40%;
+
 }
 
 #paragraphText {
